<resources>
    <string name="app_name">Scorer</string>
    <string name="submit_display">Submit</string>
    <string name="scorer_text_view">Scorer</string>
    <string name="new_match_string">New Match</string>
    <string name="previous_matches_string">Previous Matches</string>
    <string name="players_string">Players</string>
    <string name="add_new_player_string">Add New Player</string>
    <string name="first_name_string">First Name</string>
    <string name="last_name_string">Last Name</string>
    <string name="email_string">example@example.com</string>
    <string name="phone_number_string">+91</string>
    <string name="all_players_data_file">players.dat</string>
    <string name="batting_data_file">batting.dat</string>
    <string name="bowling_data_file">bowling.dat</string>
    <string name="matches_data_file">playerMatches.dat</string>
    <string name="player_information_heading">Player Information</string>
    <string name="edit_string">Edit</string>
    <string name="all_players_string">All Players</string>
    <string name="edit_player_information_string">Edit Player Information</string>
    <string name="element_text">Conatainer Text</string>
    <string name="batting_stats_string">Batting Statistics</string>
    <string name="bowling_stats_string">Bowling Statistics</string>
    <string name="team_a_text">Team A</string>
    <string name="team_b_text">Team B</string>
    <string name="first_team_name">First Team Name</string>
    <string name="second_team_name">Second Team Name</string>
    <string name="versus_string">V/S</string>
    <string name="next_string">Next</string>
    <string name="players_playing_string">Select Playing Players</string>
    <string name="playing_players_hint_string">List of Active Players Playing this match will appear here</string>
    <string name="select_captains_string">Select Captains</string>
    <string name="select_captain_string">Select Captain From Players</string>
    <string name="name_to_id_file_name">nameToId.dat</string>
    <string name="first_batting_string">Select Team Batting First</string>
    <string name="won_toss_string">Select Team Which Won Toss</string>
    <string name="select_common_player_string">Select Common Player</string>
    <string name="match_properties_string">Match Properties</string>
    <string name="overs_string">Overs</string>
    <string name="default_overs_value">8</string>
</resources>