<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MatchPropertiesActivity">

    <TextView
        android:id="@+id/team_a_name_stp5"
        android:layout_width="74dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/overs_string"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_name_stp4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:onClick="handleNextClick"
        android:text="@string/next_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_overs_mp" />

    <TextView
        android:id="@+id/team_a_name_stp4"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/match_properties_string"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scorer_text_view15" />

    <TextView
        android:id="@+id/scorer_text_view15"
        android:layout_width="214dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:text="@string/scorer_text_view"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/max_overs_mp"
        android:layout_width="65dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="number"
        android:text="@string/default_overs_value"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/team_a_name_stp5"
        app:layout_constraintTop_toBottomOf="@+id/team_a_name_stp4" />
</androidx.constraintlayout.widget.ConstraintLayout>