<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.SelectCaptainsActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="handleNextClick"
        android:text="@string/next_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_team_b_captain" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="cursive"
        android:text="@string/versus_string"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_team_a_captain" />

    <TextView
        android:id="@+id/select_team_b_captain"
        android:layout_width="287dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/editbox_background"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:drawablePadding="16dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/select_captain_string"
        android:text=""
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_b_name_sc" />

    <TextView
        android:id="@+id/select_team_a_captain"
        android:layout_width="287dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/editbox_background"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:drawablePadding="16dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/select_captain_string"
        android:text=""
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_name_sc" />

    <EditText
        android:id="@+id/team_b_name_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/first_team_name"
        android:inputType="text"
        android:text="@string/team_a_text"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/team_a_name_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/first_team_name"
        android:inputType="text"
        android:text="@string/team_a_text"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_info_heading8" />

    <TextView
        android:id="@+id/player_info_heading8"
        android:layout_width="177dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:background="#E7EBEF"
        android:fontFamily="cursive"
        android:text="@string/select_captains_string"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scorer_text_view10" />

    <TextView
        android:id="@+id/scorer_text_view10"
        android:layout_width="214dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:background="#E7EBEF"
        android:fontFamily="cursive"
        android:text="@string/scorer_text_view"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>