<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlayersSelectActivity">

    <TextView
        android:id="@+id/player_info_heading7"
        android:layout_width="177dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:fontFamily="cursive"
        android:text="@string/players_playing_string"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scorer_text_view8" />

    <TextView
        android:id="@+id/scorer_text_view8"
        android:layout_width="214dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:fontFamily="cursive"
        android:text="@string/scorer_text_view"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_playing_players"
        android:layout_width="287dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:background="@android:drawable/editbox_background"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:drawablePadding="16dp"
        android:hint="Select Playing Players"
        android:fontFamily="sans-serif-medium"
        android:text=""
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_info_heading7" />

    <TextView
        android:id="@+id/show_all_playing_players_sp"
        android:layout_width="287dp"
        android:layout_height="232dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/playing_players_hint_string"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_playing_players" />

    <Button
        android:id="@+id/next_button_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/next_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_all_playing_players_sp" />
</androidx.constraintlayout.widget.ConstraintLayout>