<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectTossWinningTeam">

    <TextView
        android:id="@+id/show_full_squad_team_b"
        android:layout_width="325dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="TextView"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_b_button_tw" />

    <TextView
        android:id="@+id/show_full_squad_team_a"
        android:layout_width="325dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="TextView"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_button_tw" />

    <Button
        android:id="@+id/team_b_button_tw"
        android:layout_width="201dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="49dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:fontFamily="cursive"
        android:text="@string/versus_string"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_full_squad_team_a" />

    <TextView
        android:id="@+id/team_a_name_stp3"
        android:layout_width="309dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:fontFamily="cursive"
        android:text="@string/won_toss_string"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scorer_text_view13" />

    <TextView
        android:id="@+id/scorer_text_view13"
        android:layout_width="214dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:text="@string/scorer_text_view"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/team_a_button_tw"
        android:layout_width="201dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_name_stp3" />

</androidx.constraintlayout.widget.ConstraintLayout>